build coding system to try embedding and bandits algorithms; write one demo.

--- a/SynBio/notebooks/gpucb_bio.ipynb
+++ b/SynBio/notebooks/gpucb_bio.ipynb
@@ -2,7 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# direct to proper path\n",
+    "import os\n",
+    "import sys\n",
+    "module_path = os.path.abspath(os.path.join('..'))\n",
+    "if module_path not in sys.path:\n",
+    "    sys.path.append(module_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +31,7 @@
     "#import statsmodels.api as sm\n",
     "import pylab \n",
     "import itertools\n",
-    "import GPUCB_Bio\n",
+    "import codes.GPUCB_Bio\n",
     "from collections import defaultdict\n",
     "\n",
     "%matplotlib inline"
@@ -25,16 +39,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pandas.read_csv('trainset.rbs1.v2.csv', delimiter=',')"
+    "df = pandas.read_csv('../data/trainset.rbs1.v2.csv', delimiter=',')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +246,7 @@
        "[5 rows x 32 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +270,7 @@
        " <a list of 10 Patch objects>)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -275,6 +289,35 @@
    ],
    "source": [
     "plt.hist(df['FC'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = df[['rbs1', 'FC']].to_numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(60,)"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[:, 0].shape"
    ]
   },
   {
@@ -815,9 +858,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
